tests/compile_fail/config/wrong_syntax.stderr
error: Expected `function = ...`
 --> tests/compile_fail/config/wrong_syntax.rs:6:7
  |
6 |     #[function]
  |       ^^^^^^^^
